<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:elevation="10dp"
        android:background="@color/primary">

        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_24"
                android:contentDescription="@string/brand_image_des"/>
        </LinearLayout>



       <TextView
           android:textSize="20sp"
           android:textColor="@color/white"
           android:textStyle="bold"
           android:text="Product Details"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/productDetailsIV"
                    android:contentDescription="@string/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/productDetailsName"
                        android:textSize="25sp"
                        android:textColor="@color/primary"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:id="@+id/productDetailsPrice"
                        android:textSize="18sp"
                        android:letterSpacing=".05"
                        android:textStyle="bold"
                        android:textColor="@color/orange"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <View
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:id="@+id/productId"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>

                    <View
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:text="@string/order_hint_1"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
                    <View
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:text="@string/order_hint_2"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
                    <View
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:text="@string/order_hint_3"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>
                    <View
                        android:background="@color/gray"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <TextView
                        android:text="@string/order_hint_4"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:text="@string/order_hint_5"
                        android:gravity="center"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/hint_name"
                        app:hintTextColor="@color/gray"
                        android:textColorHint="@color/gray"
                        app:boxStrokeColor="@color/gray"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userNameTextField"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/hint_phone"
                        app:hintTextColor="@color/gray"
                        android:textColorHint="@color/gray"
                        app:boxStrokeColor="@color/gray"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPhoneTextField"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="@string/hint_address"
                        app:hintTextColor="@color/gray"
                        android:textColorHint="@color/gray"
                        app:boxStrokeColor="@color/gray"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userAddressTextField"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textNoSuggestions"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/shopCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:hint="hint_shop_type"
                        app:hintTextColor="@color/gray"
                        android:textColorHint="@color/gray"
                        app:boxStrokeColor="@color/gray"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                        <AutoCompleteTextView
                            android:id="@+id/upozilaTV"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="100dp"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</RelativeLayout>