<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:elevation="10dp"
        android:background="@color/primary">


        <ImageView
            android:id="@+id/brandImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:src="@drawable/brand"
            android:contentDescription="@string/brand_image_des"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/callButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/primary"
                android:src="@drawable/phone"
                android:contentDescription="@string/call_icon_des"
                app:tint="@color/white" />
            <ImageButton
                android:id="@+id/facebookButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/primary"
                android:src="@drawable/facebook"
                android:contentDescription="@string/facebook_icon_des"
                app:tint="@color/white" />


        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productsRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Privacy Policy"/>

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
